# token-metadata-descriptor

./: .ammanrc.js  .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  package.json  tsconfig.build.json
program/: Cargo.toml  README.md
program/src/: constants.rs  lib.rs  utils.rs
program/src/instructions/: close.rs  copy.rs  initialize.rs  initialize_with_buffer.rs  initialize_with_data.rs  mod.rs  resize.rs
program/src/state/: descriptor.rs  mod.rs
scripts/: build.sh  setup.sh
sdk/: .solitarc.js  README.md  package.json  tsconfig.json
sdk/src/: constants.ts  index.ts  utils.ts
sdk/src/accounts/: index.ts
sdk/src/actions/: close.ts  copy.ts  index.ts  initialize.ts  initializeWithBuffer.ts  initializeWithData.ts  resize.ts
sdk/src/helpers/: index.ts  metaplex.ts
sdk/src/lib/idl/: token_metadata_descriptor.json
sdk/src/lib/src/: errors.ts
sdk/src/types/: descriptor.ts  index.ts  transaction.ts
sdk/test/: close.test.ts  copy.test.ts  initialize-with-buffer.test.ts  initialize-with-data.test.ts  initialize.test.ts  resize.test.ts
sdk/test/helpers/: assert.ts  buffer.ts  constants.ts  errors.ts  index.ts  util.ts
sdk/test/setup/: amman.ts  index.ts  initialize.ts  log.ts
sdk/test/types/: index.ts
