[package]
name = "token-metadata-descriptor"
version = "0.0.1"
description = "On-chain token metadata extension"
edition = "2021"
license = "Apache-2.0"
authors = ["sooshisan <sooshisan@pm.me>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "token_metadata_descriptor"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
mpl-token-metadata = { version = "1.5.0", features = ["no-entrypoint"] }
solana-program = "1.10.29"
borsh = "0.9.1"
solana-security-txt = "1.0.2"
